# discretelogarithm

./: CMakeLists.txt  factorize.c  factorize.h  main.c  utils.c  utils.h
